--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,29 @@
-click==6.6
+alembic==0.8.10
+aniso8601==1.2.0
+click==6.7
+coverage==4.3.4
 Flask==0.12
+Flask-Migrate==2.0.2
+Flask-RESTful==0.3.5
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
+Flask-Testing==0.6.1
 itsdangerous==0.24
-Jinja2==2.8.1
+Jinja2==2.9.4
+jwt==0.3.2
+Mako==1.0.6
 MarkupSafe==0.23
-requests==2.12.4
+nose==1.3.7
+passlib==1.7.0
+pluggy==0.4.0
+py==1.4.32
+pycrypto==2.6.1
+PyJWT==1.4.2
+python-dateutil==2.6.0
+python-editor==1.0.3
+pytz==2016.10
+six==1.10.0
+SQLAlchemy==1.1.5
+tox==2.5.0
+virtualenv==15.1.0
 Werkzeug==0.11.15
