--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+# Python extensions
+*.pyc
+
 # Distribution / packaging
 .Python
 env/
@@ -91,3 +94,10 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# Migrations
+
+.migrations/*
+./migrations/*
+migrations/*
+/migrations/*
